Fixing text alignment (#842)

--- a/apps/recent-activity/src/base-scss/mat-ui-overrides.scss
+++ b/apps/recent-activity/src/base-scss/mat-ui-overrides.scss
@@ -613,6 +613,7 @@ apx-chart .apexcharts-toolbar {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: flex-start;
       margin-left: 0;
       @include breakpoint(mobile) {
         margin-left: 1rem;
